<resources>
    <string name="app_name">Simple Keyboard</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num7">7</string>
    <string name="num6">6</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="text_a">a</string>
    <string name="text_b">b</string>
    <string name="text_c">c</string>
    <string name="text_d">d</string>
    <string name="text_e">e</string>
    <string name="text_f">f</string>
    <string name="text_g">g</string>
    <string name="text_h">h</string>
    <string name="text_i">i</string>
    <string name="text_j">j</string>
    <string name="text_k">k</string>
    <string name="text_l">l</string>
    <string name="text_m">m</string>
    <string name="text_n">n</string>
    <string name="text_o">o</string>
    <string name="text_p">p</string>
    <string name="text_q">q</string>
    <string name="text_r">r</string>
    <string name="text_s">s</string>
    <string name="text_t">t</string>
    <string name="text_u">u</string>
    <string name="text_v">v</string>
    <string name="text_w">w</string>
    <string name="text_x">x</string>
    <string name="text_y">y</string>
    <string name="text_z">z</string>
    <string name="shift_key">⇧</string>
    <string name="del_key">⌫</string>
    <string name="symbol_key"><![CDATA[</>]]></string>
    <string name="ctrl">Ctrl</string>
    <string name="alt">Alt</string>
    <string name="space">Space</string>
    <string name="period">.</string>
    <string name="enter_key">↩</string>
    <string name="tilde">~</string>
    <string name="grave">`</string>
    <string name="pipe">|</string>
    <string name="percent">%</string>
    <string name="left_bracket">[</string>
    <string name="right_bracket">]</string>
    <string name="home">Home</string>
    <string name="up_arrow">↑</string>
    <string name="end">End</string>
    <string name="shift_comma"><![CDATA[<]]></string>
    <string name="shift_period"><![CDATA[>]]></string>
    <string name="curly_left">{</string>
    <string name="curly_right">}</string>
    <string name="equals">=</string>
    <string name="power">^</string>
    <string name="dollar">$</string>
    <string name="left_arrow">←</string>
    <string name="down_arrow">↓</string>
    <string name="right_arrow">→</string>
    <string name="at_key">\@</string>
    <string name="pound">#</string>
    <string name="backslash">\\</string>
    <string name="big_minus">_</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="slash">/</string>
    <string name="comma">,</string>
    <string name="tab">↹</string>
    <string name="main_switch">ABC</string>
    <string name="star">*</string>
    <string name="double_apostrophe">\"</string>
    <string name="apostrophe">\'</string>
    <string name="colon">:</string>
    <string name="semi_colon">;</string>
    <string name="exclaimation">!</string>
    <string name="question">\?</string>
</resources>